# waves-node-grpc-testing

./: Cargo.toml  Dockerfile  readme.md
src/: get_block_update.rs  main.rs  subscribe.rs
