[package]
name = "node-grpc-testing"
version = "0.1.0"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2"
tokio = { version = "0.2", features = ["full"] }
waves-protobuf-schemas = { path = "../protobuf-schemas" }
