[package]
name = "node-grpc-testing"
version = "0.1.0"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "v1.4.4" }

[[bin]]
name = "subscribe"
path = "src/subscribe.rs"

[[bin]]
name = "get_block_update"
path = "src/get_block_update.rs"